less/tables.less
//
// Tables
// --------------------------------------------------


table {
  background-color: @table-bg;
}
caption {
  padding-top: @table-cell-padding;
  padding-bottom: @table-cell-padding;
  color: @text-muted;
  text-align: left;
}
th {
  text-align: left;
}


// Baseline styles

.table {
  width: 100%;
  max-width: 100%;
  margin-bottom: @line-height-computed;
  // Cells
  > thead,
  > tbody,
  > tfoot {
    > tr {
      > th,
      > td {
        padding: @table-cell-padding;
        line-height: @line-height-base;
        vertical-align: top;
        border-top: 1px solid @table-border-color;
      }
    }
  }
  // Bottom align for column headings
  > thead > tr > th {
    vertical-align: bottom;
    border-bottom: 2px solid @table-border-color;
  }
  // Remove top border from thead by default
  > caption + thead,
  > colgroup + thead,
  > thead:first-child {
    > tr:first-child {
      > th,
      > td {
        border-top: 0;
      }
    }
  }
  // Account for multiple tbody instances
  > tbody + tbody {
    border-top: 2px solid @table-border-color;
  }

  // Nesting
  .table {
    background-color: @body-bg;
  }

  > thead,
  > tfoot {
      font-size: (@font-size-small - 2px);
  }
  > tbody {
      font-size: @font-size-small;
  }
}


// Condensed table w/ half padding

.table-condensed {
  > thead,
  > tbody,
  > tfoot {
    > tr {
      > th,
      > td {
        padding: @table-condensed-cell-padding;
      }
    }
  }
}


// Bordered version
//
// Add borders all around the table and between all the columns.

.table-bordered {
  border: 1px solid @table-border-color;
  > thead,
  > tbody,
  > tfoot {
    > tr {
      > th,
      > td {
        border: 1px solid @table-border-color;
      }
    }
  }
  > thead > tr {
    > th,
    > td {
      border-bottom-width: 2px;
    }
  }
}


// Zebra-striping
//
// Default zebra-stripe styles (alternating gray and transparent backgrounds)

.table-striped {
  > tbody > tr:nth-of-type(odd) {
    background-color: @table-bg-accent;
  }
}


// Hover effect
//
// Placed here since it has to come after the potential zebra striping

.table-hover {
  > tbody > tr:hover {
    background-color: @table-bg-hover;
  }
}


// Table cell sizing
//
// Reset default table behavior

table col[class*="col-"] {
  position: static; // Prevent border hiding in Firefox and IE9-11 (see https://github.com/twbs/bootstrap/issues/11623)
  float: none;
  display: table-column;
}
table {
  td,
  th {
    &[class*="col-"] {
      position: static; // Prevent border hiding in Firefox and IE9-11 (see https://github.com/twbs/bootstrap/issues/11623)
      float: none;
      display: table-cell;
    }
  }
}


// Table backgrounds
//
// Exact selectors below required to override `.table-striped` and prevent
// inheritance to nested tables.

// Generate the contextual variants
.table-row-variant(active; @table-bg-active; @table-border-color);
.table-row-variant(success; @state-success-bg; @state-success-text);
.table-row-variant(info; @state-info-bg; @state-info-text);
.table-row-variant(warning; @state-warning-bg; @state-warning-text);
.table-row-variant(danger; @state-danger-bg; @state-danger-text);


// Responsive tables
//
// Wrap your tables in `.table-responsive` and we'll make them mobile friendly
// by enabling horizontal scrolling. Only applies <768px. Everything above that
// will display normally.

.table-responsive {
  overflow-x: auto;
  min-height: 0.01%; // Workaround for IE9 bug (see https://github.com/twbs/bootstrap/issues/14837)

  @media screen and (max-width: @screen-xs-max) {
    width: 100%;
    margin-bottom: (@line-height-computed * 0.75);
    overflow-y: hidden;
    -ms-overflow-style: -ms-autohiding-scrollbar;
    /*border: 1px solid @table-border-color;*/

    // Tighten up spacing
    > .table {
      margin-bottom: 0;

      // Ensure the content doesn't wrap
      > thead,
      > tbody,
      > tfoot {
        > tr {
          > th,
          > td {
            white-space: nowrap;
          }
        }
      }
    }

    // Special overrides for the bordered tables
    > .table-bordered {
      border: 0;

      // Nuke the appropriate borders so that the parent can handle them
      > thead,
      > tbody,
      > tfoot {
        > tr {
          > th:first-child,
          > td:first-child {
            border-left: 0;
          }
          > th:last-child,
          > td:last-child {
            border-right: 0;
          }
        }
      }

      // Only nuke the last row's bottom-border in `tbody` and `tfoot` since
      // chances are there will be only one `tr` in a `thead` and that would
      // remove the border altogether.
      > tbody,
      > tfoot {
        > tr:last-child {
          > th,
          > td {
            border-bottom: 0;
          }
        }
      }

    }
  }
}



.table-bordered {
    border-radius: @border-radius-small;

    > thead {
        background-color: @gray-base;
    }

    > tbody {
        > tr > th {
            color: @brand-primary;
        }
    }

    > thead > tr > th,
    > tbody > tr > th,
    > tfoot > tr > th,
    > thead > tr > td,
    > tbody > tr > td,
    > tfoot > tr > td {
        border-left: none;
        border-right: none;
    }
}

.table {
    > thead > tr > th {
       border-bottom-width: 1px;
   }
}

@media screen and (max-width: @screen-sm-max) {

	/* Force table to not be like tables anymore */
	.table, thead, tbody, th, td, tr {
		display: block;
	}

    .table {
    	thead, tbody, th, td, tr {
            display: block;
        }
    	/* Hide table headers (but not display: none;, for accessibility) */
    	thead tr {
    		position: absolute;
    		top: -9999px;
    		left: -9999px;
    	}

    	tr {
            border: 1px solid @table-border-color;
            border-radius: @border-radius-base;
            margin-bottom: (@padding-base-vertical * 3);
        }
        tr:last-child {
            margin-bottom: 0;
        }

    	td {
    		/* Behave  like a "row" */
    		border: none;
    		border-top: 1px solid #eee;
    		position: relative;
    		padding-left: 50% !important;
            white-space: nowrap;
            overflow-x: auto;
    	}
        th {
            border-top: 0 !important;
        }

    	td:before {
    		/* Now like a table header */
    		position: absolute;
    		width: 45%;

    		/* Top/left values mimic padding */
            /*
    		padding-right: 10px;*/
            top: 0px;
    		left: 0px;
    		white-space: nowrap;
            background-color: @gray-base;
            padding: @table-cell-padding;
    	}

    	/*
    	Label the data
    	*/
    	td:nth-of-type(1):before { content: "First Name"; }
    	td:nth-of-type(2):before { content: "Last Name"; }
    	td:nth-of-type(3):before { content: "Job Title"; }
    	td:nth-of-type(4):before { content: "Favorite Color"; }
    	td:nth-of-type(5):before { content: "City"; }
    	td:nth-of-type(6):before { content: "Country"; }
    	td:nth-of-type(7):before { content: "Date of Birth"; }

        &.table-bordered {
            border: 0 !important;
            tr {
                border-top-width: 1px;
            }
            td, th {
                border-left-width: 0px !important;
                border-right-width: 0px !important;
                border-bottom-width: 0px !important;
            }
        }
        caption {
            display: block;
        }

        &.table-responsive {
            border: 0 !important;
        }
    }
}

@media screen and (max-width: @screen-xs-max) {
    /* Display like description list */
    &.table {
        tr {
            padding-top: (@padding-base-vertical * 2);
            clear: both;
        }
        tbody th {
            border-bottom: 1px solid @table-border-color;
            margin-bottom: @line-height-computed;

            &:first-child {
                margin-top: (@padding-base-vertical * -2);
            }
        }
        td {
            padding: @line-height-computed @table-cell-padding 0 !important;
            color: @brand-blue-plus-20;
            margin-bottom: @line-height-computed;
            border-top: 0 !important;
            white-space: normal;

            float: left;
            min-width: 50%;
        }
        td:before {
    		/* Now like a table header */
    		position: absolute;
            top: 0px;
    		left: 0px;
            width: 100%;
            font-size: @font-size-small;
            line-height: @line-height-computed;
            color: @brand-grey-plus-10;
            background-color: transparent !important;
            padding-top: 0;
    	}
    }
}

